--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,7 @@
     "@carbon/react": "^1.55.0",
     "@carbon/themes": "^11.34.0",
     "@carbon/type": "^11.26.0",
+    "@storybook/addon-a11y": "^8.1.10",
     "@storybook/addon-actions": "^8.0.9",
     "@storybook/addon-controls": "^8.0.9",
     "@storybook/addon-docs": "^8.0.9",
