--- a/packages/ibm-products/telemetry.yml
+++ b/packages/ibm-products/telemetry.yml
@@ -288,6 +288,7 @@ collect:
         - selectionAreas
         - selectorPageContent
         - selectorPrimaryFocus
+        - selectorsFloatingMenus
         - sequence
         - setActiveCellCoordinates
         - setAllFilters
