--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,7 +176,7 @@ jobs:
         with:
           node-version: '20.x'
       - name: Install dependencies
-        run: yarn install --immutable --immutable-cache
+        run: yarn
       - name: Build project
         run: yarn build
       - name: Run Percy Storybook
