--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,9 +122,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           cache: yarn
@@ -148,11 +148,16 @@ jobs:
         if: github.repository == 'carbon-design-system/ibm-products'
         run: |
           yarn playwright test --project chromium --grep @avt --shard="${{ matrix.shard }}/4"
+      - name: Run VRT
+        working-directory: packages/core
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN_IBM_PRODUCTS }}
+          run: yarn percy storybook http://localhost:3000
       - name: Stop storybook
         run: kill ${{ steps.storybook.outputs.pid }}
       - name: Upload test results
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: playwright-avt-report
           path: .playwright
@@ -164,32 +169,3 @@ jobs:
     steps:
       - name: Check AVT Runner job status
         if: ${{ needs.avt-runner.result != 'success' }}
-        run: exit 1
-
-  vrt-runner:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20.x'
-      - name: Install dependencies
-        run: yarn
-      - name: Build project
-        run: yarn build
-      - name: Run Percy Storybook
-        working-directory: packages/core
-        run: |
-          echo 'PERCY_TOKEN=${{ secrets.PERCY_TOKEN_IBM_PRODUCTS }}' >> .env
-          yarn percy storybook:start storybook-static
-
-  vrt:
-    if: ${{ always() }}
-    runs-on: ubuntu-latest
-    needs: vrt-runner
-    steps:
-      - name: Check VRT Runner job status
-        if: ${{ needs.vrt-runner.result != 'success' }}
-        run: exit 1
