--- a/config/jest-config-ibm-cloud-cognitive/package.json
+++ b/config/jest-config-ibm-cloud-cognitive/package.json
@@ -25,18 +25,21 @@
     "npm-check-updates": "^16.7.4"
   },
   "peerDependencies": {
-    "jest": "^29.4.2"
+    "jest": "^29.7.0"
   },
   "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@babel/core": "^7.23.9",
+    "@testing-library/jest-dom": "^6.3.0",
     "accessibility-checker": "3.1.40",
     "axe-core": "^4.6.3",
-    "babel-jest": "^29.4.2",
+    "babel-jest": "^29.7.0",
     "babel-preset-ibm-cloud-cognitive": "^0.14.28",
     "chalk": "^4.1.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
-    "jest-circus": "^29.4.2"
+    "jest-circus": "^29.7.0"
+  },
+  "resolutions": {
+    "ws": "8.17.1"
   }
 }
