--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -38,8 +38,8 @@ jobs:
 
       # https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
       - run: |
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-          git config user.name $GITHUB_ACTOR
+          git config --global user.email "carbon@us.ibm.com"
+          git config --global user.name "carbon-bot"
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
