--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,11 +1,10 @@
 # Deploy staging storybook environment from release branch to Github Pages
 name: Deploy staging storybook
 
-# Gets triggered every time a '@carbon/ibm-products@2.*' github tag is published
+# Gets triggered every time a change is pushed to the `release/v2*` branch
 on:
   push:
-    tags:
-      - '@carbon/ibm-products@2.*'
+    branches: [release/v2*]
 
 jobs:
   deploy-staging-storybook:
