--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "cspell": "^8.3.2",
     "eslint": "^8.56.0",
     "eslint-config-carbon": "^2.20.0",
+    "eslint-plugin-ssr-friendly": "^1.3.0",
     "husky": "^9.0.5",
     "jest": "^29.7.0",
     "jest-canvas-mock": "2.5.2",
@@ -119,8 +120,12 @@
         ]
       }
     },
+    "plugins": [
+      "ssr-friendly"
+    ],
     "extends": [
-      "carbon"
+      "carbon",
+      "plugin:ssr-friendly/recommended"
     ],
     "rules": {
       "react/display-name": [
