--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "format:e2e": "prettier ./e2e/**/*.js --write --ignore-unknown",
     "generate": "lerna run generate --loglevel success --scope \"@carbon/ibm-products\" --",
     "lint": "run-p -s 'lint:*'",
+    "lint:license": "scripts/check-license.cjs",
+    "lint:license:staged": "scripts/check-license.cjs -w",
     "lint:js": "eslint packages --fix",
     "lint:styles": "stylelint '**/*.scss'",
     "prepare": "husky install",
@@ -82,6 +84,8 @@
     "cspell": "^8.3.2",
     "eslint": "^8.56.0",
     "eslint-config-carbon": "^2.20.0",
+    "gitignore-to-glob": "^0.3.0",
+    "globby": "^14.0.0",
     "husky": "^9.0.5",
     "jest": "^29.7.0",
     "jest-canvas-mock": "2.5.2",
