--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
                 "DataSpreadsheet",
                 "NotificationsPanel",
                 "PageHeader",
-                "TearsheetSheel"
+                "TearsheetSheet"
               ],
               "message": "Avoid using style prop"
             }
