--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -51,7 +51,7 @@
   "dependencies": {
     "@carbon/ibm-products-styles": "^2.48.0",
     "@carbon/styles": "1.67.0",
-    "@carbon/web-components": "2.15.0",
+    "@carbon/web-components": "2.16.0-rc.0",
     "lit": "^3.1.0"
   },
   "devDependencies": {
