--- a/packages/ibm-products-web-components/netlify.toml
+++ b/packages/ibm-products-web-components/netlify.toml
@@ -2,7 +2,7 @@
 [build]
 command = "yarn build:storybook"
 publish = "storybook-static"
-ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF packages/ibm-products-web-components"
+ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ."
 
 [build.environment]
 YARN_ENABLE_GLOBAL_CACHE = "true"
