--- a/packages/ibm-products-web-components/netlify.toml
+++ b/packages/ibm-products-web-components/netlify.toml
@@ -1,8 +1,8 @@
 # Netlify build and deploy settings - https://docs.netlify.com/configure-builds/file-based-configuration/#sample-file
 [build]
-command = "yarn build:storybook"
-publish = "storybook-static"
 ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF packages/ibm-products-web-components"
+command = "yarn build && yarn build:storybook"
+publish = "storybook-static"
 
 [build.environment]
 YARN_ENABLE_GLOBAL_CACHE = "true"
