--- a/packages/ibm-products-web-components/netlify.toml
+++ b/packages/ibm-products-web-components/netlify.toml
@@ -1,7 +1,7 @@
 # Netlify build and deploy settings - https://docs.netlify.com/configure-builds/file-based-configuration/#sample-file
 [build]
 ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF packages/ibm-products-web-components"
-command = "yarn build && yarn build:storybook"
+command = "yarn build:storybook"
 publish = "storybook-static"
 
 [build.environment]
