--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -39,8 +39,8 @@
     "web components"
   ],
   "scripts": {
-    "build": "yarn clean && node tasks/build.js && yarn wca",
-    "build:storybook": "yarn wca && storybook build",
+    "build": "node tasks/build.js && yarn wca",
+    "build:storybook": "storybook build",
     "clean": "rimraf es lib scss dist storybook-static",
     "preview": "vite preview",
     "storybook": "storybook dev -p 3000",
@@ -62,14 +62,14 @@
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
-    "@storybook/addon-essentials": "^8.2.8",
-    "@storybook/addon-links": "^8.2.8",
-    "@storybook/addon-storysource": "^8.2.8",
-    "@storybook/blocks": "^8.2.8",
-    "@storybook/manager-api": "^8.3.4",
-    "@storybook/theming": "^8.3.4",
-    "@storybook/web-components": "^8.2.8",
-    "@storybook/web-components-vite": "^8.2.8",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-storysource": "^8.3.6",
+    "@storybook/addon-toolbars": "^8.3.6",
+    "@storybook/blocks": "^8.3.6",
+    "@storybook/theming": "^8.3.6",
+    "@storybook/web-components": "^8.3.6",
+    "@storybook/web-components-vite": "^8.3.6",
     "@types/jest": "^29.5.13",
     "@vitest/browser": "latest",
     "@vitest/ui": "latest",
