--- a/package.json
+++ b/package.json
@@ -148,7 +148,10 @@
             {
               "propName": "style",
               "disallowedFor": [
-                "Datagrid","Carousel","Checklist","Coachmark"
+                "Datagrid",
+                "Carousel",
+                "Checklist",
+                "Coachmark"
               ],
               "message": "Avoid using style prop"
             }
@@ -162,7 +165,10 @@
             {
               "propName": "style",
               "disallowedFor": [
-                "Datagrid","Carousel","Checklist","Coachmark"
+                "Datagrid",
+                "Carousel",
+                "Checklist",
+                "Coachmark"
               ],
               "message": "Avoid using style prop"
             }
