chore: add coverage to eslintignore

--- a/.eslintignore
+++ b/.eslintignore
@@ -26,6 +26,9 @@ packages/*/examples/*
 # Story files
 *.stories.*
 
+# Coverage files
+**/coverage/**
+
 # Ignore template files
 packages/ibm-products/scripts/generate/templates/**/*.js*
 scripts/example-gallery-builder/update-example/**/*.js*
