chore: update release branch pattern in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
       - v1
-      - 'release/v2*'
+      - 'release\/v2**'
   merge_group:
     types: [checks_requested]
 
