--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -174,11 +174,6 @@ jobs:
         if: github.repository == 'carbon-design-system/ibm-products'
         run: |
           yarn playwright test --project chromium --grep @avt --shard="${{ matrix.shard }}/4"
-      - name: Run VRT
-        working-directory: packages/core
-        env:
-          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN_IBM_PRODUCTS }}
-        run: yarn percy storybook storybook-static
       - name: Stop storybook
         run: kill ${{ steps.storybook.outputs.pid }}
       - name: Upload test results
@@ -187,6 +182,28 @@ jobs:
         with:
           name: playwright-avt-report
           path: .playwright
+
+  vrt-runner:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20.x'
+          cache: yarn
+      - name: Install
+        run: yarn
+      - name: Install browsers
+        run: yarn playwright install --with-deps
+      - name: Build project
+        run: yarn build
+      - name: Run VRT
+        working-directory: packages/core
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN_IBM_PRODUCTS }}
+        run: yarn percy storybook storybook-static
 
   avt:
     if: ${{ always() }}
