--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - main
       - v1
       - 'release/v2*'
-      - vrt-setup-5236
+      - percyTest1
   merge_group:
     types: [checks_requested]
 
