--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -98,6 +98,7 @@
     "@carbon/feature-flags": "^0.24.0",
     "@carbon/ibm-products-styles": "^2.57.0",
     "@carbon/telemetry": "^0.1.0",
+    "@carbon/utilities": "^0.4.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
