--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -52,6 +52,7 @@
     "@carbon/ibm-products-styles": "^2.57.0-rc.0",
     "@carbon/styles": "1.75.0",
     "@carbon/web-components": "2.23.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "lit": "^3.1.0"
   },
   "devDependencies": {
@@ -74,6 +75,7 @@
     "@storybook/theming": "^8.6.2",
     "@storybook/web-components": "^8.6.2",
     "@storybook/web-components-vite": "^8.6.2",
+    "@testing-library/dom": "^10.4.0",
     "@types/jest": "^29.5.13",
     "@vitest/browser": "^3.0.1",
     "@vitest/coverage-v8": "^3.0.1",
@@ -90,6 +92,7 @@
     "rollup": "^4.27.3",
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.80.6",
+    "shadow-dom-testing-library": "^1.12.0",
     "storybook": "^8.6.2",
     "storybook-addon-accessibility-checker": "^3.1.61-rc.3",
     "tslib": "^2.8.1",
