--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -77,7 +77,7 @@
     "@storybook/web-components-vite": "^8.6.2",
     "@testing-library/dom": "^10.4.0",
     "@types/jest": "^29.5.13",
-    "@vitest/browser": "^3.0.1",
+    "@vitest/browser": "^3.0.8",
     "@vitest/coverage-v8": "^3.0.1",
     "autoprefixer": "^10.4.20",
     "c8": "^10.1.3",
@@ -86,7 +86,9 @@
     "eslint-config-carbon": "^3.19.0",
     "globby": "^14.0.2",
     "happy-dom": "^15.11.6",
+    "playwright": "^1.51.0",
     "postcss": "^8.4.47",
+    "query-selector-shadow-dom": "^1.0.1",
     "remark-gfm": "^4.0.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.27.3",
@@ -98,7 +100,7 @@
     "tslib": "^2.8.1",
     "typescript": "^5.5.3",
     "vite": "^6.0.3",
-    "vitest": "^3.0.1",
+    "vitest": "^3.0.8",
     "web-component-analyzer": "2.0.0"
   }
 }
