--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,7 +119,7 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       - name: CI snapshot tests for c4p
         run: yarn ci-check:test:c4p:snapshot
-  test-c4p-major-version:
+  test-c4p-react-major-version:
     strategy:
       matrix:
         react: [17]
@@ -137,7 +137,7 @@ jobs:
         with:
           path: '**/node_modules'
           key:
-            test-c4p-major-versions-modules-${{ runner.os }}-${{
+            test-c4p-react-major-versions-modules-${{ runner.os }}-${{
             hashFiles('yarn.lock') }}
       - name: Install
       - run: yarn
