--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -86,6 +86,7 @@
     "eslint-config-carbon": "^3.19.0",
     "globby": "^14.0.2",
     "happy-dom": "^15.11.6",
+    "playwright": "^1.51.1",
     "postcss": "^8.4.47",
     "remark-gfm": "^4.0.0",
     "rimraf": "^5.0.5",
