--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
     strategy:
       matrix:
         react:
-          - 17.0.1
-          - 18.3.1
+          - ^17.0.1
+          - ^18.3.1
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -39,10 +39,10 @@ jobs:
       - name: Add React version ${{ matrix.react }}
         run: yarn add react@${{ matrix.react }} react-dom@${{ matrix.react }}
       - name: Add legacy dependencies
-        if: ${{ startsWith(matrix.react, '17.') }}
+        if: ${{ startsWith(matrix.react, '^17.') }}
         run: |
-          yarn workspace @carbon/ibm-cloud-cognitive-core add @carbon/react@1.28 -D
-          yarn workspace @carbon/ibm-products add @carbon/react@1.28 -P
+          yarn workspace @carbon/ibm-cloud-cognitive-core add react@${{ matrix.react }} react-dom@${{ matrix.react }} @carbon/react@^1.28.0 -D
+          yarn workspace @carbon/ibm-products add @carbon/react@^1.28.0 -P
       - name: CI build checks
         run: yarn ci-check:build
 
